# web2pdf

./: README.md  pyproject.toml
src/: __init__.py
src/adapters/: Adapter.py  DynamicLoadOnePagePngAdapter.py  VariablePageSizePngAdapter.py
src/compilers/: Compiler.py  OcrPdfCompiler.py
src/scrapers/: InteractiveScraper.py
src/storage/: PngFsStorage.py  Storage.py
src/utils/: make_driver.py
